--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
 }
 .user{
     width: 25rem;
@@ -32,6 +33,9 @@ body{
     border: none;
     display: inline-block;
 
+}
+div{
+    width: 100%;
 }
 h1{
     font-size: 1.8rem;
@@ -68,5 +72,7 @@ h1{
         height: 1.1rem;
         margin-left: 8px;
     }
-   
+    div{
+        width: 96%;
+    }
 }
